<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.features.lead.add.AddLeadSecondFragment">

    <ProgressBar
        android:id="@+id/pb_create_lead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/primary_yellow"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="@dimen/size_2"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ib_back_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_16"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@null"
            android:focusable="true"
            android:src="@drawable/ic_left_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@style/roundedImageView.extraSmallRounded"
            app:tint="@color/black"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/tv_title_toolbar"
            style="@style/Title.medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/medium_space"
            android:layout_toStartOf="@id/iv_ic_save_add"
            android:layout_toEndOf="@+id/ib_back_toolbar"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/text_add_lead"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iv_ic_save_add"
            app:layout_constraintStart_toEndOf="@id/ib_back_toolbar"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_ic_save_add"
            android:layout_width="@dimen/size_24"
            android:layout_height="@dimen/size_24"
            android:layout_marginEnd="@dimen/size_16"
            android:contentDescription="@null"
            android:src="@drawable/ic_save_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/sv_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="@dimen/medium_space"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/cl_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_lead_info"
                style="@style/Title.medium"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/text_lead_information"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_lead_type_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/size_16"
                android:text="@string/text_lead_type_required"
                android:textSize="@dimen/text_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_lead_info" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_lead_type"
                style="@style/GxInputLayoutStyle.Dropdown"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_6"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_lead_type_title">

                <AutoCompleteTextView
                    android:id="@+id/dd_lead_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/text_select_lead_type"
                    android:inputType="none"
                    android:labelFor="@id/tv_lead_type_title"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_lead_channel_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/size_16"
                android:text="@string/text_lead_channel_required"
                android:textSize="@dimen/text_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_lead_type" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_lead_channel"
                style="@style/GxInputLayoutStyle.Dropdown"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_6"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_lead_channel_title">

                <AutoCompleteTextView
                    android:id="@+id/dd_lead_channel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/text_select_lead_channel"
                    android:inputType="none"
                    android:labelFor="@id/tv_lead_channel_title"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_lead_media_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/size_16"
                android:text="@string/text_lead_media_required"
                android:textSize="@dimen/text_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_lead_channel" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_lead_media"
                style="@style/GxInputLayoutStyle.Dropdown"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_6"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_lead_media_title">

                <AutoCompleteTextView
                    android:id="@+id/dd_lead_media"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/text_select_lead_media"
                    android:inputType="none"
                    android:labelFor="@id/tv_lead_media_title"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_lead_source_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/size_16"
                android:text="@string/text_lead_source_required"
                android:textSize="@dimen/text_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_lead_media" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_lead_source"
                style="@style/GxInputLayoutStyle.Dropdown"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_6"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_lead_source_title">

                <AutoCompleteTextView
                    android:id="@+id/dd_lead_source"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/text_select_lead_source"
                    android:inputType="none"
                    android:labelFor="@id/tv_lead_source_title"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_lead_status_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/size_16"
                android:text="@string/text_lead_status_required"
                android:textSize="@dimen/text_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_lead_source" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_lead_status"
                style="@style/GxInputLayoutStyle.Dropdown"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_6"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_lead_status_title">

                <AutoCompleteTextView
                    android:id="@+id/dd_lead_status"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/text_select_lead_status"
                    android:inputType="none"
                    android:labelFor="@id/tv_lead_status_title"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_lead_probability_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/size_16"
                android:text="@string/text_lead_probability_required"
                android:textSize="@dimen/text_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_lead_status" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_lead_probability"
                style="@style/GxInputLayoutStyle.Dropdown"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_6"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_lead_probability_title">

                <AutoCompleteTextView
                    android:id="@+id/dd_lead_probability"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/text_select_probability_media"
                    android:inputType="none"
                    android:labelFor="@id/tv_lead_probability_title"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_notes_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/size_16"
                android:text="@string/text_notes"
                android:textSize="@dimen/text_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_lead_probability" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_notes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_6"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_notes_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cl_button" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/medium_space"
        android:paddingVertical="@dimen/small_space"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/extra_small_space"
            android:paddingVertical="@dimen/small_space"
            android:text="@string/text_submit"
            android:textAllCaps="false"
            android:textSize="@dimen/text_14"
            app:elevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_previous"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_previous"
            style="@style/GxButtonStyle.Outlined"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/extra_small_space"
            android:paddingVertical="@dimen/small_space"
            android:text="@string/text_previous"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="@+id/btn_submit"
            app:layout_constraintEnd_toStartOf="@id/btn_submit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_submit"
            app:strokeColor="@color/primary_yellow" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>